# varcore

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Readme.md  build.cmd  build.sh  cppcheck_suppress.txt  lgtm.yml
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  Makefile
examples/repl/: .gitignore  CMakeLists.txt  Makefile  client.tcl  common.h  console.c  console.h  repl  repl.c  res.csv  telnet.c  telnet.h  textio.c  textio.h  vardefs.h  vars.c  vars.h
lib/: .gitignore  CMakeLists.txt  Makefile  cppcheck_suppress.txt  errcode.h  varcore.c  varcore.h
test/: .gitignore  CMakeLists.txt  Makefile  res.csv  test_dump.c  test_enum.c  test_f32.c  test_misc.c  test_s16.c  test_s32.c  test_str.c  test_utils.h  testrunner.c  varcore_test.c  varcore_test.h
tools/: CMakeLists.txt  Makefile
tools/varpp/: .gitignore  CMakeLists.txt  Makefile  Res.csv  compat.c  defs.c  defs.h  loc.c  loc.h  log.c  log.h  strpool.c  strpool.h  utils.c  utils.h  vardefs.h  varpp.c
